RESOLVED FIXED136702
Fix !ENABLE(DFG_JIT) build
https://bugs.webkit.org/show_bug.cgi?id=136702
Summary Fix !ENABLE(DFG_JIT) build
Dániel Bátyai
Reported 2014-09-10 06:23:23 PDT
[ 7%] Building CXX object Source/JavaScriptCore/CMakeFiles/LLIntOffsetsExtractor.dir/llint/LLIntOffsetsExtractor.cpp.o In file included from /home/webkit/WebKit/Source/JavaScriptCore/bytecode/CallLinkInfo.h:29:0, from /home/webkit/WebKit/Source/JavaScriptCore/bytecode/CodeBlock.h:37, from /home/webkit/WebKit/Source/JavaScriptCore/llint/LLIntOffsetsExtractor.cpp:29: /home/webkit/WebKit/Source/JavaScriptCore/bytecode/CallEdgeProfile.h:104:55: error: 'JSValueRegs' has not been declared /home/webkit/WebKit/Source/JavaScriptCore/bytecode/CallEdgeProfile.h:108:63: error: 'JSValueRegs' has not been declared ICECC[28983] 00:01:13: Compiled on 10.109.163.1 make[3]: *** [Source/JavaScriptCore/CMakeFiles/LLIntOffsetsExtractor.dir/llint/LLIntOffsetsExtractor.cpp.o] Error 1
Attachments
Patch (971 bytes, patch)
2014-09-10 06:25 PDT, Dániel Bátyai
no flags
Dániel Bátyai
Comment 1 2014-09-10 06:25:38 PDT
Michael Saboff
Comment 2 2014-09-10 07:26:04 PDT
Comment on attachment 237887 [details] Patch r=me
WebKit Commit Bot
Comment 3 2014-09-10 07:57:59 PDT
Comment on attachment 237887 [details] Patch Clearing flags on attachment: 237887 Committed r173460: <http://trac.webkit.org/changeset/173460>
WebKit Commit Bot
Comment 4 2014-09-10 07:58:02 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.