Fix !ENABLE(DFG_JIT) build https://bugs.webkit.org/show_bug.cgi?id=136702

Reviewed by Michael Saboff.

* bytecode/CallEdgeProfile.h:


Canonical link: https://commits.webkit.org/154509@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173460 268f45cc-cd09-0410-ab3c-d52691b4dbfc